# rust-java-jni-example

./: Cargo.toml
src/: lib.rs  main.rs
src/java/: Main.java
